<resources>
    <string name="app_name">EasyPetrol</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">User Login</string>
    <string name="Loginbtn">Login</string>
    <string name="not_have_an_account">Not have an account? Sign Up</string>
    <string name="register">User Register</string>
    <string name="have_account">Have an account? Sign In</string>
    <string name="Registerbtn">Register</string>
    <string name="availabel">Available</string>
    <string name="not_availabel">No Petrol</string>
</resources>
