<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.roshan.easypetrol.Authentication.LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:scrollbarThumbVertical="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#00b"
            android:textAlignment="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/txt_user_login"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/edit_email"
            android:inputType="textWebEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_user_login"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="Enter  Email"/>

        <EditText
            android:id="@+id/edit_password"
            android:inputType="textWebPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_email"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="Enter Password"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_login"
            android:text="@string/Loginbtn"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:id="@+id/txt_sign_up"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/not_have_an_account"/>

    </RelativeLayout>

</LinearLayout>
